--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <a href="wwr/index.html">My Instagram</a>
-      <a href="wwr/site-plan-rafting.html">My Facebook</a>
+      <a href="wwr/site-plan-rafting.html">White Water Rafting Site</a>
       <a href="positioning.html">More About Me</a>
       <a href="Rynoridge.com">My Shopify Store</a>
       <a href="#">Yes I'm Single</a>
