--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -22,18 +22,29 @@
       <hr />
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>Welcome to White Water Rafting, your gateway to exhilarating adventures on the most thrilling rivers in the world! We are a passionate team of experienced guides and river enthusiasts dedicated to providing unforgettable white water rafting experiences for adventurers of all levels.</p>
+      <p>
+        Welcome to White Water Rafting, your gateway to exhilarating adventures
+        on the most thrilling rivers in the world! We are a passionate team of
+        experienced guides and river enthusiasts dedicated to providing
+        unforgettable white water rafting experiences for adventurers of all
+        levels.
+      </p>
       <!-- change this -->
 
       <h3>Audience</h3>
-      <p>Whether you're a seasoned white water rafter or a first-time adventurer, White Water Rafting is the perfect choice for your next thrilling river adventure. Contact us today to book your trip and experience the magic of white water rafting for yourself!</p>
+      <p>
+        Whether you're a seasoned white water rafter or a first-time adventurer,
+        White Water Rafting is the perfect choice for your next thrilling river
+        adventure. Contact us today to book your trip and experience the magic
+        of white water rafting for yourself!
+      </p>
       <!-- change this -->
 
       <hr />
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="wwr/images/rafting-momentum (1).jpg" alt="Logo" />
+      <img src="C:\wdb130\wwr\images\rafting-momentum (1).jpg" alt="Logo" />
       <hr />
       <h2>Style Guide</h2>
 
@@ -51,7 +62,7 @@
         </tr>
 
         <tr>
-          <td class="Primary"></td>
+          <td class="primary"></td>
           <td class="secondary"></td>
           <td class="accent1"></td>
           <td class="accent2"></td>
@@ -92,8 +103,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Contact Us</a>
+        <a href="#">Book Your Trip</a>
+        <a href="#">Why Rafting?</a>
       </nav>
       <hr />
       <h2>Site Map</h2>
