--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -44,7 +44,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="rafting-momentum(1)" alt="Logo"/>
+      <img src="images/raftinglogo.jpg" alt="Logo"/>
       <hr />
       <h2>Style Guide</h2>
 
@@ -75,7 +75,7 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Rock Salt
+        Heading Font: New Rocker
         <!-- change this -->
       </h4>
       <h4>
