--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD130 | Home</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
-      <a href="wwr/index.html">My Instagram</a>
-      <a href="wwr/site-plan-rafting.html">White Water Rafting Site</a>
-      <a href="positioning.html">More About Me</a>
-      <a href="Rynoridge.com">My Shopify Store</a>
-      <a href="#">Yes I'm Single</a>
+      <a href="wwr/index.html">White Water Rafting Site</a>
+      <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
+      <a href="positioning.html">another site</a>
+      <a href="Rynoridge.com">another site</a>
+      <a href="#">next site</a>
     </nav>
     <h1>Ryan Adams</h1>
     <img width="400px" src="20241012_171758.jpg" alt="Image of Me" />
