--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav>
-      <a href="wwr/index.html">White Water Rafting Site</a>
-      <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
-      <a href="positioning.html">another site</a>
-      <a href="Rynoridge.com">another site</a>
-      <a href="#">next site</a>
-    </nav>
+    <header>
+      <nav>
+        <a href="wwr/index.html">White Water Rafting Site</a>
+        <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
+        <a href="positioning.html">another site</a>
+        <a href="Rynoridge.com">another site</a>
+        <a href="#">next site</a>
+      </nav>
+    </header>
     <h1>Ryan Adams</h1>
-    <img width="400px" src="20241012_171758.jpg" alt="Image of Me" />
+    <img src="20241012_171758.jpg" alt="Image of Me" 
+    width="200px"
+    class="center">
     <p>
       Hi! Im Ryan Adams. I'm from Malad Idaho, just two hours south of Rexburg.
       I'm studying business managment, but I've got a big varriety of classes
@@ -38,5 +42,12 @@
       scriptures and personal revelation. One of my favorite scriptures is
       Romans 5: 3-6
     </p>
+    <footer>
+      <p>
+        My favorite website is
+        <a href="https://www.youtube.com/@Rynoblock"></a>
+        https://www.youtube.com/@Rynoblock
+      </p>
+    </footer>
   </body>
 </html>
