--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>"White Water Rafting | Book Now | Contact Us"</title>
+    <title>"White_Water_Adventures"</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+    <div id="content">
     <header>
       <a id="logo_link" href="index.html">
-        <img class="logo" src="images/logo.png" alt="Dry Oar Logo" />
+        <img class="logo" src="images/logo.png" alt="Who's Rafting Logo?" />
       </a>
       <nav>
         <a href="index.html">Home</a>
@@ -47,23 +49,23 @@
   </section>
   <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
   <section class="msg">
-      <h2>More Than Just The Thrill</h2>
-      <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+      <h2>More Than A Thrill!</h2>
+      <p>Enjoy the breathtaking scenery! From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
       <a class='join' href="rivers.html">Join Us</a>
   </section>
   </main>
   <footer>
-    <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+    <p>Dry Oar &copy; 2025 - Ryan Adams</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
     </div>
