--- a/wwr/troubleshooting.html
+++ b/wwr/troubleshooting.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     
 </head>
-
+<textarea name="ethanscript" id="ethanscriptid"></textarea>
 <body>
    <header>
     <title>Whitewater rafting vacation | Dry Oar Boating | Home</title>
@@ -25,7 +25,7 @@
        <main>
            <div><img src="http://byui-wdd.github.io/wdd130/resources/images/rafting65_600.jpg" alt="Rafters on river"></div>
 <section>
-        <div><h2>We run Rivers to relax.
+        <div><h2>We run Rivers to relax. 
         <p>We believe that there is nothing like a river trip for <em>relaxing</em>. That is why we subscribe to the dry oar philosophy of boating. Keeping your oars dry for us means taking time to look around and notice the <strong>beauty</strong> that surrounds the rivers we love.</p></h2>
     </div>
     <div><img scr="http://byui-wdd.github.io/wdd130/resources/images/rafting58_600.jpg" alt="Wide shot of rafters on river"></div>
