--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
       </nav>
     </header>
     <h1>Ryan Adams</h1>
-    <img src="20241012_171758.jpg" alt="Image of Me" 
-    width="200px"
-    class="center">
+    <img
+      src="20241012_171758.jpg"
+      alt="Image of Me"
+      width="200px"
+      class="center"
+    />
     <p>
       Hi! Im Ryan Adams. I'm from Malad Idaho, just two hours south of Rexburg.
       I'm studying business managment, but I've got a big varriety of classes
