--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav>
         <a href="wwr/index.html">White Water Rafting Site</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
-        <a href="positioning.html">another site</a>
+        <a href="positioning.html">Positioning CSS</a>
         <a href="Rynoridge.com">another site</a>
         <a href="#">next site</a>
       </nav>
