--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,15 +9,16 @@
   <body>
     <div id="content">
     <header>
-      <a id="logo_link" href="index.html">
+      <div id="logo">
         <img class="logo" src="images/logo.png" alt="Who's Rafting Logo?" />
-      </a>
-      <nav>
+      </div>
+    
+      <div id="nav">
         <a href="index.html">Home</a>
         <a href="#">Page 2</a>
         <a href="site-plan-rafting.html">Site Plan<a>
         <a href="contactus.html">Contact Us</a>
-      </nav>
+        </div>
     </header>
     <div id="hero">
       <div id="hero-box">
