--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -131,7 +131,13 @@
         alt="home page wireframe"
       />
 
-      <h3>[Page 2]</h3>
+      <h3>Page 2</h3>
+
+      <img
+        class="images"
+        src="images\Screenshot 2025-02-25 104816.png"
+        alt="page 2 wireframe"
+      />
 
       <!-- <img src="#" alt="page 2 wireframe"> -->
     </main>
