--- a/wwr/index.html
+++ b/wwr/index.html
@@ -21,16 +21,14 @@
         </div>
     </header>
     <div id="hero">
-      <div id="hero-box">
-          <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-      </div>
-      <section id="hero-msg">
+    
+      <div id="hero-msg">
           <h1 class="home-title">Have An Adventure</h1>
           <h4>Make Memories with Dry Oar </h4>
           <div class='button-box'>
               <a class='book' href="contactus.html">Book Now</a>
           </div>
-      </section>
+        </div>
   </div>
   <main class="home-grid">
     <section class="rivers-card">
@@ -48,19 +46,26 @@
       <img class="icon" src="images/oars.png" alt="oars icon">
       <h2>Rapids</h2>
   </section>
-  <div id="background"></div>
+  <div id="mtnsection">
+    <div id="mtns">
   <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-  <section class="msg">
+  </div>
+  <div id="msg">
       <h2>More Than A Thrill!</h2>
-      <p>Enjoy the breathtaking scenery! From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+      <p>Enjoy the breathtaking scenery! From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p></br>
       <a class='join' href="rivers.html">Join Us</a>
-  </section>
-  </main>
+  </div>
+  </div>
+</main>
   <footer>
+    <div id="footer">
+    <div id="footertext">
     <p>Dry Oar &copy; 2025 - Ryan Adams</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
-    <div class="social">
+  </div>
+  
+    <div id="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
@@ -70,7 +75,8 @@
         <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
-    </div>
+    </div></div>
 </footer>
+</div>
   </body>
 </html>
