--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="wwr/index.html">White Water Rafting Site</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
         <a href="positioning.html">Positioning CSS</a>
-        <a href="Rynoridge.com">another site</a>
+        <a href="Rynoridge/site-plan.html">Personal Site Plan</a>
         <a href="#">next site</a>
       </nav>
     </header>
