homework site plan

--- a/Rynoridge/site-plan.html
+++ b/Rynoridge/site-plan.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
     
@@ -7,6 +6,7 @@
     <title>Site Plan</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
+
 
   <body>
     <header>
@@ -21,18 +21,21 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>Rynoridge fuels your passion for the mountains with expertly crafted skis and snowboards, built for those who chase the thrill of winter. We believe in gear that performs as hard as you do, empowering you to explore untouched powder and conquer challenging terrain. While performance is paramount, we also strive to minimize our impact with thoughtful design and sustainable practices, including the use of recycled materials. Rynoridge is your trusted partner for authentic winter adventures, where the spirit of the outdoors meets exceptional equipment.</p>  <!-- change this -->
+      <p>Rynoridge fuels your passion for the mountains with expertly crafted skis and snowboards, built for those who chase the thrill of winter. We believe in gear that performs as hard as you do, empowering you to explore untouched powder and conquer challenging terrain. While performance is paramount, we also strive to minimize our impact with thoughtful design and sustainable practices, including the use of recycled materials. Rynoridge is your trusted partner for authentic winter adventures, where the spirit of the outdoors meets exceptional equipment.</p>
 
 
       <h3>Audience</h3>
-      <p>Rynoridge is designed for the passionate winter sports enthusiast, the individual who feels most alive when carving down a mountain or exploring a snowy trail. It's for those who appreciate high-quality equipment that can withstand the rigors of challenging conditions, whether they're seasoned professionals or weekend adventurers. We cater to those who value both performance and style, seeking gear that reflects their unique personality and love for the outdoors. Moreover, Rynoridge appeals to the environmentally conscious, those who understand the importance of preserving the natural beauty of the winter landscape and appreciate brands that strive for sustainability. Ultimately, Rynoridge is for anyone who seeks to elevate their winter experience with reliable, thoughtfully designed, and responsibly made skis and snowboards.</p>  <!-- change this -->
+      <p>Rynoridge is designed for the passionate winter sports enthusiast, the individual who feels most alive when carving down a mountain or exploring a snowy trail. It's for those who appreciate high-quality equipment that can withstand the rigors of challenging conditions, whether they're seasoned professionals or weekend adventurers. We cater to those who value both performance and style, seeking gear that reflects their unique personality and love for the outdoors. Moreover, Rynoridge appeals to the environmentally conscious, those who understand the importance of preserving the natural beauty of the winter landscape and appreciate brands that strive for sustainability. Ultimately, Rynoridge is for anyone who seeks to elevate their winter experience with reliable, thoughtfully designed, and responsibly made skis and snowboards.</p>
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
-      <hr>
+       <div>
+        
+      <img id="logo-image" src="images/Rhino logo.png" alt="Logo image">
+    </div>
+    <hr>
       <h2>
         Style Guide
       </h2>
@@ -58,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Protest Revolution  <!-- change this -->
+        Heading Font: Protest Revolution
       </h4>
       <h4>
-        Paragraph Font: Poiret One  <!-- change this -->
+        Paragraph Font: Poiret One
       </h4>
       <h3>
         Normal paragraph example
@@ -97,13 +100,13 @@
           Home
         </div>
         <div class="sm-store">
-          Store <!-- change this -->
+          Store
         </div>
         <div class="sm-aboutus">
-          About Us  <!-- change this -->
+          About Us
         </div>
         <div class="sm-contactus">
-          Contact Us  <!-- change this -->
+          Contact Us
         </div>
 
         <div class="top">
@@ -125,20 +128,20 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Rynoridge is your trusted partner for authentic winter adventures, where the spirit of the outdoors meets exceptional equipment. Our skis and snowboards are expertly crafted for those who chase the thrill of winter, designed to perform as hard as you do. We believe in gear that empowers you to explore untouched powder and conquer challenging terrain, while minimizing our impact with thoughtful design and sustainable practices. Rynoridge is your gateway to the mountains, where performance, style, and responsibility converge.
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <p>Images for the Home page:</p>
+        <img id="home-image1" src="images\skiing-snowboarding-knee-injuries.jpg" alt="image for homepage">
+        <img id="home-image2" src="images\snowboard-shaping.avif" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Gallery</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Welcome to our gallery, where you can explore a curated collection of images showcasing our premium winter sports gear. From expertly crafted skis and snowboards to essential accessories, each photo captures the essence of Rynoridge's commitment to quality, performance, and style. Our gallery highlights the intricate details and innovative designs that set our products apart, providing a visual journey through the craftsmanship and passion that goes into every piece of equipment. Whether you're a seasoned professional or a weekend adventurer, our gallery offers a glimpse into the world of Rynoridge, where the thrill of winter sports meets exceptional gear. Discover the beauty and functionality of our products, designed to elevate your winter experience and inspire your next adventure on the slopes.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for my Gallery:</p>
+        <img id="page2-image1" src="images\skiandboard.jpg" alt="image for page">
+        <img id="page2-image2" src="images\unnamed.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -146,8 +149,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img id="page3-image1" src="images\102-les-2-alpes-automne-hiver-snowpark-640x640.jpg" alt="image for page3">
+        <img id="page3-image2" src="images\Artur-Didyk-shutterstock_1187224183.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -159,21 +162,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        basic home page with an image as the background and more text and images in text boxes throughout the page. 
       </p>
-      <img src="#" alt="home page wireframe">
+      <img id="wireframe-home" src="images\Screenshot 2025-03-08 193156.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Gallery</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This will be the gallery page showcasing the products. I will have a search bar and a filter option to help the user find what they are looking for. The nav bar and footer will be the same as the other pages.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img id="wireframe-page2" src="images\Screenshot 2025-03-08 193722.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Shop</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This will be the shop page showcasing the prudcts with prices and descriptions. I will have a search bar and a filter option to help the user find what they are looking for, and a cart icon to show what they have added to their cart. The nav bar and footer will be the same as the other pages.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img id="wireframe-page3" src="images\Screenshot 2025-03-08 193844.png" alt="page 3 wireframe">
     </main>
   </body>
 
