--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,8 +14,8 @@
       </div>
     
       <div id="nav">
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
+        <a href="index.html">Reload</a>
+        <a href="page2.html">Blog</a>
         <a href="site-plan-rafting.html">Site Plan<a>
         <a href="contactus.html">Contact Us</a>
         </div>
