--- a/wwr/page2.html
+++ b/wwr/page2.html
@@ -24,18 +24,15 @@
           <div class="hero-image">
             <img src="images\Gallatin-River-Rafting-min.webp" alt="Hero Image">
           </div>
-          <div class="hero-text">
-            <h1>Medium length hero headline</h1>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit.</p>
             <div class="hero-buttons">
-              <button class="store-button">Store</button>
-              <button class="action-button">Button</button>
+              <button class="store-button">Gear Store</button>
+              <button class="action-button">Book a Trip</button>
             </div>
           </div>
         </section>
         <section class="features">
-          <h2>Medium length features headline</h2>
-          <p>Lorem ipsum dolor sit amet et delectus accommodare.</p>
+          <h2>Read these blogs before your trip!</h2>
+          <p>Get accounted with the safety procedures, gear, staff, and itinerary.</p>
           <div class="gallery">
             <div class="gallery-item">
               <img src="images/rattle-snake (1).jpg" alt="Rafting Image 1">
