--- a/Rynoridge/site-plan.html
+++ b/Rynoridge/site-plan.html
@@ -174,7 +174,7 @@
 
       <h3>Shop</h3>
       <p>         
-        This will be the shop page showcasing the prudcts with prices and descriptions. I will have a search bar and a filter option to help the user find what they are looking for, and a cart icon to show what they have added to their cart. The nav bar and footer will be the same as the other pages.
+        This will be the shop page showcasing the products with prices and descriptions. I will have a search bar and a filter option to help the user find what they are looking for, and a cart icon to show what they have added to their cart. The nav bar and footer will be the same as the other pages.
       </p>
       <img id="wireframe-page3" src="images\Screenshot 2025-03-08 193844.png" alt="page 3 wireframe">
     </main>
