--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
         <a href="positioning.html">Positioning CSS</a>
         <a href="Rynoridge/site-plan.html">Personal Site Plan</a>
-        <a href="#">Personal Site</a>
+        <a href="Rynoridge/home.html">Personal Site</a>
       </nav>
     </header>
     <h1>Ryan Adams</h1>
